Fixed abnormal length of bottom navigation menu.